--- a/Notebook2/app/build.gradle
+++ b/Notebook2/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.johndev.notebook"
         minSdk 21
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1.0.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -94,4 +94,8 @@ dependencies {
 
     //  Constraint Layout
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
+
+    //  Admob
+    //implementation 'com.google.android.gms:play-services-ads:20.3.0'
+
 }
