--- a/Notebook2/app/build.gradle
+++ b/Notebook2/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -12,15 +13,13 @@ android {
         applicationId "com.johndev.notebook"
         minSdk 21
         targetSdk 33
-        versionCode 2
-        versionName "1.1.0.0"
-
+        versionCode 5
+        versionName "1.2.1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
         }
     }
-
     buildTypes {
         release {
             minifyEnabled false
@@ -28,17 +27,17 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.2.0'
+        kotlinCompilerExtensionVersion '1.4.3'
     }
     packagingOptions {
         resources {
@@ -49,53 +48,51 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.core:core-ktx:1.10.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.activity:activity-compose:1.7.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.2.0'
+    implementation 'androidx.compose.material:material:1.4.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
-
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     //  Live Data
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
-    implementation "androidx.compose.runtime:runtime-livedata:1.3.3"
-
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
     //  Coil
-    implementation 'io.coil-kt:coil-compose:2.2.2'
-
+    implementation 'io.coil-kt:coil-compose:2.3.0'
     //  Constraint Layout
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
-
     //  Navigation
     implementation 'androidx.navigation:navigation-compose:2.5.3'
-
     //  Room 2.4.1
-    implementation "androidx.room:room-runtime:2.5.0"
+    implementation "androidx.room:room-runtime:2.5.1"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    kapt "androidx.room:room-compiler:2.5.0"
-    implementation 'androidx.room:room-ktx:2.5.0'
-
+    kapt "androidx.room:room-compiler:2.5.1"
+    implementation 'androidx.room:room-ktx:2.5.1'
     //  Acompanist
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
     implementation "com.google.accompanist:accompanist-pager:0.27.0"
-
     //  Shared Preferences
     implementation 'androidx.preference:preference-ktx:1.2.0'
-
     //  Constraint Layout
     implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
-
     //  Admob
     //implementation 'com.google.android.gms:play-services-ads:20.3.0'
+    //  Dagger Hilt
+    implementation 'com.google.dagger:hilt-android:2.45'
+    kapt 'com.google.dagger:hilt-android-compiler:2.45'
 
+}
+
+// Hilt: Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
