--- a/Notebook2/app/build.gradle
+++ b/Notebook2/app/build.gradle
@@ -1,20 +1,20 @@
 plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-    id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
+    id "com.android.application"
+    id "org.jetbrains.kotlin.android"
+    id "kotlin-kapt"
+    id "dagger.hilt.android.plugin"
 }
 
 android {
-    namespace 'com.johndev.notebook'
+    namespace "com.johndev.notebook"
     compileSdk 33
 
     defaultConfig {
         applicationId "com.johndev.notebook"
         minSdk 21
         targetSdk 33
-        versionCode 6
-        versionName "1.2.2.0"
+        versionCode 9
+        versionName "1.3.0.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
             useSupportLibrary true
@@ -23,7 +23,7 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile("proguard-android-optimize.txt"), "proguard-rules.pro"
         }
     }
     compileOptions {
@@ -31,63 +31,64 @@ android {
         targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = "17"
     }
     buildFeatures {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.3'
+        kotlinCompilerExtensionVersion "1.4.3"
     }
     packagingOptions {
         resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+            excludes += "/META-INF/{AL2.0,LGPL2.1}"
         }
     }
 }
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
-    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation "androidx.core:core-ktx:1.10.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
+    implementation "androidx.activity:activity-compose:1.7.2"
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.4.3'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    implementation "androidx.compose.material:material:1.4.3"
+    testImplementation "junit:junit:4.13.2"
+    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
     //Coroutines
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
     //  Live Data
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
     implementation "androidx.compose.runtime:runtime-livedata:1.4.3"
     //  Coil
-    implementation 'io.coil-kt:coil-compose:2.3.0'
+    implementation "io.coil-kt:coil-compose:2.3.0"
     //  Constraint Layout
-    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     //  Navigation
-    implementation 'androidx.navigation:navigation-compose:2.6.0'
+    implementation "androidx.navigation:navigation-compose:2.6.0"
     //  Room 2.4.1
     implementation "androidx.room:room-runtime:2.5.2"
     kapt "androidx.room:room-compiler:2.5.2"
-    implementation 'androidx.room:room-ktx:2.5.2'
+    implementation "androidx.room:room-ktx:2.5.2"
     //  Acompanist
-    implementation "com.google.accompanist:accompanist-systemuicontroller:0.17.0"
+    implementation "com.google.accompanist:accompanist-systemuicontroller:0.30.1"
     implementation "com.google.accompanist:accompanist-pager:0.27.0"
     //  Shared Preferences
-    implementation 'androidx.preference:preference-ktx:1.2.0'
+    implementation "androidx.preference:preference-ktx:1.2.0"
     //  Constraint Layout
-    implementation 'androidx.constraintlayout:constraintlayout-compose:1.0.1'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
     //  Admob
-    //implementation 'com.google.android.gms:play-services-ads:20.3.0'
+    //implementation "com.google.android.gms:play-services-ads:20.3.0"
     //  Dagger Hilt
-    implementation 'com.google.dagger:hilt-android:2.45'
-    kapt 'com.google.dagger:hilt-android-compiler:2.45'
+    implementation "com.google.dagger:hilt-android:2.45"
+    kapt "com.google.dagger:hilt-android-compiler:2.45"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
 }
 
